# dieselfire

./: .gitignore  8MB_partition.csv  BuildREADME.txt  CMakeCache.txt  CNAME  LICENSE  Makefile  README.md  add_CRC.py  bluewire-test.js  bluewire-test.wasm  cmake_install.cmake  dieselfire-sim.html  dieselfire-sim.js  fota.json  index.js  index.wasm  lv_conf.h  platformio.ini
.github/workflows/: release.yml  wasm.yml
.opencode/plans/: pcb-layout-update.md
Arduino/Afterburner/: README.txt
Bootload/: Checklist.txt
CRCgen/: Readme.txt
boards/: dieselfire.json
docs/design/: DieselFire-Design.md  DieselFire-S3-Design.md
docs/firmware/: Firmware-Documentation.md
docs/hardware/: Hardware-Documentation.md  PCB-Layout-Status.md
docs/integration/: T-Deck-Integration-Plan.md
kicad/: Afterburner-Modern-drc.rpt  Afterburner-Modern-erc.rpt  Afterburner-Modern.kicad_pro  DieselFire.kicad_pro  autoroute_full.py  generate_footprints.py  generate_pcb_api.py  generate_pcb_complete.py  generate_pcb_final.py  generate_pcb_part1.py  generate_pcb_part2.py  generate_project.py  generate_schematic.py  generate_symbols.py  pipeline.py  run_pipeline.sh  test-drc.rpt  test_schematic-erc.rpt  test_schematic13-erc.rpt  test_schematic14-erc.rpt  test_schematic3-erc.rpt  test_schematic4-erc.rpt  test_schematic5-erc.rpt  test_schematic6-erc.rpt  test_schematic7-erc.rpt  test_schematic_final-erc.rpt  test_schematic_minimal3-erc.rpt  test_schematic_minimal6-erc.rpt  update_project.py
kicad/case/: DieselFire_case_base.stl  DieselFire_case_lid.step  README.md  dieselfire_case_assembled.step  dieselfire_case_base.step  dieselfire_case_lid.stl  generate_case.py
kicad/fabrication/: DieselFire-drc.txt  DieselFire.dsn  DieselFire.ses  dieselfire-cpl.csv  dieselfire-drc.txt  dieselfire.dsn  drc-report.txt  pick-and-place.csv
kicad/footprints/: Afterburner.kicad_fp  DieselFire.kicad_fp
kicad/pcb/: Afterburner-Modern.kicad_pcb  Afterburner-Modern.kicad_prl  Afterburner-Modern.kicad_pro  DRC.rpt  DieselFire.kicad_pcb
kicad/pcb_fab/: __init__.py  export.py
kicad/pcb_placement/: __init__.py  apply.py  plan.py
kicad/pcb_routing/: __init__.py  autoroute.py  critical.py
kicad/schematic/: Afterburner-Modern.kicad_sch  DieselFire.kicad_sch
lib/TelnetSpy/: TelnetSpy.cpp
scripts/: gen_fota_json.py
simulator/: CMakeLists.txt  bluwire_task.cpp  heater_emu.cpp  heater_emu.h  lv_conf.h  main.cpp  shell.html  test_bluewire.cpp  test_init  test_init.cpp  test_mid  test_mid.cpp  test_minimal  test_minimal.cpp  test_nobw.cpp  test_scope.cpp  test_sizes.cpp  test_tick_empty  test_tick_empty.cpp  test_tickbw  test_tickbw.cpp  vserial.cpp  vserial.h
simulator/build_asan/: CMakeCache.txt  Makefile  bluewire-test  cmake_install.cmake
simulator/build_dbg/: CMakeCache.txt  Makefile  bluewire-test  cmake_install.cmake
simulator/include/: Arduino.h  FreeRTOS.h  Preferences.h  Print.h  Stream.h  WiFi.h  WiFiClient.h  mock_all.h
simulator/include/Protocol/: Protocol.h
simulator/include/RTC/: Clock.h  Timers.h
simulator/include/Utility/: DF_GPIO.h  DataFilter.h  DebugPort.h  DemandManager.h  FuelGauge.h  MQCOSensor.h  NVStorage.h  TempSense.h
simulator/include/WiFi/: DFMQTT.h
simulator/include/cfg/: DFConfig.h  pins.h
simulator/include/driver/: adc.h
simulator/mock/: mock_clock.cpp  mock_clock.h  mock_data.cpp  mock_data.h  mock_globals.cpp  mock_tempsense.cpp  mock_types.h  mock_utilclasses.cpp
simulator/screens/: BTScreen.cpp  BWDebugScreen.cpp  BWDebugScreen.h  DieselScreen.cpp  DieselScreen.h  FrostScreen.cpp  FuelCalScreen.cpp  FuelMixtureScreen.cpp  GPIOScreen.cpp  GPIOScreen.h  HeaterSettingsScreen.cpp  HeaterSettingsScreen.h  HourMeterScreen.cpp  HumidityScreen.cpp  InheritScreen.h  LVCScreen.cpp  LVCScreen.h  MQTTScreen.cpp  MainStatusScreen.cpp  MainStatusScreen.h  PasswordScreen.cpp  RebootScreen.cpp  RebootScreen.h  SensorScreen.cpp  SensorScreen.h  SettingsMenuScreen.cpp  SettingsMenuScreen.h  SystemScreen.cpp  ThermostatScreen.cpp  ThermostatScreen.h  TimeoutsScreen.cpp  TimerChartScreen.cpp  TimerChartScreen.h  TimerEditScreen.cpp  TimerEditScreen.h  WiFiScreen.cpp  WiFiScreen.h
simulator/site/: index.html
src/: README.txt  main.cpp
src/Bluetooth/: BluetoothAbstract.h  BluetoothESP32.cpp  BluetoothESP32.h  BluetoothHC05.cpp  BluetoothHC05.h
src/Display/: ILI9341Driver.cpp  ILI9341Driver.h  LVGLDisplay.cpp  LVGLDisplay.h
src/OLED/: 128x64OLED.cpp  128x64OLED.h  433MHzScreen.cpp  433MHzScreen.h  BME280Screen.cpp  BME280Screen.h  BTScreen.cpp  BTScreen.h  BasicScreen.cpp  BasicScreen.h  ClockScreen.cpp  ClockScreen.h  DS18B20Screen.cpp  DS18B20Screen.h  DetailedScreen.cpp  DetailedScreen.h  FrostScreen.cpp  FrostScreen.h  FuelCalScreen.cpp  FuelCalScreen.h  FuelMixtureScreen.cpp  FuelMixtureScreen.h  GPIOInfoScreen.cpp  GPIOInfoScreen.h  GPIOSetupScreen.cpp  GPIOSetupScreen.h  HeaterSettingsScreen.cpp  HeaterSettingsScreen.h  HomeMenuSelScreen.cpp  HomeMenuSelScreen.h  HourMeterScreen.cpp  HourMeterScreen.h  HumidityScreen.cpp  HumidityScreen.h  InheritSettingsScreen.cpp  InheritSettingsScreen.h  KeyPad.cpp  KeyPad.h  LVCScreen.cpp  LVCScreen.h  (+42 more)
src/Protocol/: 433MHz.cpp  433MHz.h  BlueWireTask.cpp  BlueWireTask.h  Protocol.cpp  Protocol.h  SmartError.cpp  SmartError.h  TxManage.cpp  TxManage.h
src/RTC/: Clock.cpp  Clock.h  DFDateTime.cpp  DFDateTime.h  RTCStore.cpp  RTCStore.h  TimerManager.cpp  TimerManager.h  Timers.cpp  Timers.h
src/Utility/: BoardDetect.cpp  BoardDetect.h  DFTelnetSpy.cpp  DFTelnetSpy.h  DF_GPIO.cpp  DF_GPIO.h  DF_JSON.cpp  DF_JSON.h  DFpreferences.cpp  DFpreferences.h  DataFilter.cpp  DataFilter.h  Debounce.cpp  Debounce.h  DebugPort.h  DemandManager.cpp  DemandManager.h  FuelGauge.cpp  FuelGauge.h  GetLine.cpp  GetLine.h  HourMeter.cpp  HourMeter.h  MODBUS-CRC16.cpp  MODBUS-CRC16.h  MQCOSensor.cpp  MQCOSensor.h  MQTTsetup.cpp  MQTTsetup.h  Moderator.cpp  Moderator.h  NVCore.cpp  NVCore.h  NVStorage.cpp  NVStorage.h  TempSense.cpp  TempSense.h  UtilClasses.cpp  UtilClasses.h  helpers.h  (+1 more)
src/WiFi/: BrowserUpload.cpp  BrowserUpload.h  DFMQTT.cpp  (+12 more)
(+73 files in other folders)
